crates/dlin-core/src/graph/filter/tests/snapshots/dlin_core__graph__filter__tests__collapse__collapse_snapshot.snap
---
source: crates/dlin-core/src/graph/filter/tests/collapse.rs
assertion_line: 1267
expression: render_mermaid(&collapsed)
---
flowchart LR
    exposure_dash>"dash"]
    source_raw_x(["raw_x"])

    source_raw_x ==>|"exposure (via 3)"| exposure_dash

    classDef source fill:#27AE60,stroke:#333,color:#fff
    classDef exposure fill:#E74C3C,stroke:#333,color:#fff
    class exposure_dash exposure
    class source_raw_x source
