crates/dlin-core/src/graph/filter/tests/snapshots/dlin_core__graph__filter__tests__collapse__collapse_snapshot_endpoints_fan_out.snap
---
source: crates/dlin-core/src/graph/filter/tests/collapse.rs
assertion_line: 1404
expression: render_mermaid(&collapsed)
---
flowchart LR
    model_mart_a["mart_a"]
    model_mart_b["mart_b"]
    source_raw_x(["raw_x"])

    source_raw_x -.->|"source (via 1)"| model_mart_a
    source_raw_x -.->|"source (via 1)"| model_mart_b

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    classDef source fill:#27AE60,stroke:#333,color:#fff
    class model_mart_a model
    class model_mart_b model
    class source_raw_x source
