crates/dlin-core/src/graph/filter/tests/snapshots/dlin_core__graph__filter__tests__collapse__collapse_snapshot_endpoints_leaf_model.snap
---
source: crates/dlin-core/src/graph/filter/tests/collapse.rs
assertion_line: 1438
expression: render_mermaid(&collapsed)
---
flowchart LR
    model_mart_x["mart_x"]
    source_raw_x(["raw_x"])

    source_raw_x -.->|"source (via 1)"| model_mart_x

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    classDef source fill:#27AE60,stroke:#333,color:#fff
    class model_mart_x model
    class source_raw_x source
