crates/dlin-core/src/graph/filter/tests/snapshots/dlin_core__graph__filter__tests__collapse__collapse_snapshot_no_source_exposure.snap
---
source: crates/dlin-core/src/graph/filter/tests/collapse.rs
assertion_line: 1546
expression: render_mermaid(&collapsed)
---
flowchart LR
    model_b["b"]


    classDef model fill:#4A90D9,stroke:#333,color:#fff
    class model_b model
