crates/dlin-core/src/graph/filter/tests/snapshots/dlin_core__graph__filter__tests__collapse__snapshot_transitive_node_type_filter.snap
---
source: crates/dlin-core/src/graph/filter/tests/collapse.rs
assertion_line: 1599
expression: render_mermaid(&filtered)
---
flowchart LR
    model_mart_events["mart_events"]
    source_raw_events(["events"])

    source_raw_events -.->|"source (via 2)"| model_mart_events

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    classDef source fill:#27AE60,stroke:#333,color:#fff
    class model_mart_events model
    class source_raw_events source
