crates/dlin-core/src/graph/filter/tests/snapshots/dlin_core__graph__filter__tests__collapse__snapshot_transitive_select_filter.snap
---
source: crates/dlin-core/src/graph/filter/tests/collapse.rs
assertion_line: 1638
expression: render_mermaid(&filtered)
---
flowchart LR
    model_a["a"]
    model_c["c"]
    model_e["e"]

    model_a -->|"ref (via 1)"| model_c
    model_c -->|"ref (via 1)"| model_e

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    class model_a model
    class model_c model
    class model_e model
